--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -107,6 +107,18 @@
         <artifactId>h2</artifactId>
         <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-core</artifactId>
+</dependency>
+<dependency>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-database-postgresql</artifactId>
+</dependency>
+<dependency>
+    <groupId>software.amazon.awssdk</groupId>
+    <artifactId>s3</artifactId>
+    <version>2.20.26</version> </dependency>
 </dependencies>
 
 	<build>
