fix(ci): Disable Redis during tests to fix build

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.password=password
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+# ===============================
+
+# --- THIS IS THE FIX ---
+# Disable Redis auto-configuration during tests to prevent connection errors in CI
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration,org.springframework.boot.autoconfigure.data.redis.RedisRepositoriesAutoConfiguration
