--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,4 +38,13 @@ logging.level.org.springframework.security=DEBUG
 # ===============================
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+# ===============================
+# CLOUD FILE STORAGE (S3) CONFIGURATION
+# ===============================
+# These can be placeholder values for now, but they must exist.
+aws.s3.bucket-name=your-bucket-name
+aws.s3.region=us-east-1
+aws.s3.endpoint=https://s3.us-east-1.amazonaws.com
+aws.access.key=your-access-key
+aws.secret.key=your-secret-key
 
