--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "@angular/platform-server": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.0",
+    "@fortawesome/angular-fontawesome": "^3.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
     "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/postcss": "^4.1.12",
     "express": "^5.1.0",
