implemented the whole authetification with 2fac auth

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/tuniv_db
 spring.datasource.username=postgres
 spring.datasource.password=myLocalDbPass123
 
+
+app.frontend.url=http://localhost:4200
+
+
 # ===============================
 # JPA / HIBERNATE CONFIGURATION
 # ===============================
