--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -133,6 +133,20 @@
     <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
     <version>2.5.0</version>
 </dependency>
+<dependency>
+    <groupId>dev.samstevens.totp</groupId>
+    <artifactId>totp-spring-boot-starter</artifactId>
+    <version>1.7.1</version>
+</dependency>
+<dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>javase</artifactId>
+    <version>3.5.1</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+</dependency>
 </dependencies>
 
 	<build>
