working on some ui problems

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,13 @@ spring.datasource.username=postgres
 spring.datasource.password=myLocalDbPass123
 
 
+# Storage Configuration (local or s3)
+storage.type=local
+
+# Local Storage Directory
+file.upload-dir=./uploads
+
+
 app.frontend.url=http://localhost:4200
 
 
