working on qa pages

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -44,11 +44,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # ===============================
 logging.level.org.springframework.security=DEBUG
 
-# ===============================
-# REDIS CACHE CONFIGURATION
-# ===============================
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+
 # ===============================
 # CLOUD FILE STORAGE (S3) CONFIGURATION
 # ===============================
@@ -58,4 +54,12 @@ aws.s3.region=us-east-1
 aws.s3.endpoint=https://s3.us-east-1.amazonaws.com
 aws.access.key=your-access-key
 aws.secret.key=your-secret-key
+
+# Caching Configuration
+spring.cache.type=simple
+# ===============================
+# REDIS CACHE CONFIGURATION
+# ===============================
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 
