--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,9 +35,11 @@
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
     "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/postcss": "^4.1.12",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "jwt-decode": "^4.0.0",
     "ng-zorro-antd": "^20.1.3",
+    "ngx-quill": "^28.0.1",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.12",
