--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -62,4 +62,8 @@ spring.cache.type=simple
 # ===============================
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+# Spring Multipart (File Upload) Configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
