--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "@angular/ssr": "^20.2.0",
     "@fortawesome/angular-fontawesome": "^3.0.0",
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
-    "@stomp/stompjs": "^7.1.1",
+    "@stomp/rx-stomp": "^2.0.1",
     "@tailwindcss/postcss": "^4.1.12",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
