--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ app.frontend.url=http://localhost:4200
 # JPA / HIBERNATE CONFIGURATION
 # ===============================
 # 'update' is good for development. For production, consider 'validate' or a migration tool like Flyway.
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
