adding valkey and rabbitmq

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -76,3 +76,40 @@ app.2fa.time-period=30
 # Development profile
 spring.profiles.active=dev
 
+# =============================================================================
+# RabbitMQ Configuration for WebSocket Message Broker
+# =============================================================================
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+
+# =============================================================================
+# Valkey (Redis) Configuration for Session & Presence Storage
+# =============================================================================
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
+spring.data.redis.lettuce.pool.max-wait=-1
+
+# =============================================================================
+# Chat Application Specific Configuration
+# =============================================================================
+app.chat.message.allow-html=true
+app.chat.message.max-length=5000
+
+# =============================================================================
+# Optional: RabbitMQ Connection Settings (if needed)
+# =============================================================================
+# spring.rabbitmq.listener.simple.retry.enabled=true
+# spring.rabbitmq.listener.simple.retry.initial-interval=1000
+# spring.rabbitmq.listener.simple.retry.max-attempts=3
+
+# =============================================================================
+# Optional: Redis Connection Timeout (if needed)
+# =============================================================================
+# spring.data.redis.timeout=2000ms
