improving the chat service

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -113,3 +113,6 @@ app.chat.message.max-length=5000
 # Optional: Redis Connection Timeout (if needed)
 # =============================================================================
 # spring.data.redis.timeout=2000ms
+
+app.chat.last-message-flush-interval=2000
+
